goods-management: record §15 live verification (WS1/2a/2b/3 + golden queries green)
Booted the merged code on :8082 (verify profile, local DB/OCS, config-server down)
after reinstalling litemall-db to ~/.m2. Confirmed live: DB-paged productCJList
(total 700, distinct pages, no CJ API refetch); /srv/goods/list source:ocs +
facets with db fallback; cj-sync purges cj:raw:list:* after land (categories/detail
kept); cj-sync returns inserted/updated/removed (0 new/700 updated/0 removed);
7 golden queries at query_stage 0 with CJ blended into the unified list. Corrected
the golden table to the observed ranking (local out-ranks at #1; CJ blends lower).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>